feat : Add feature that move search page

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -14,19 +14,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:hint="@string/search_hint"
-        android:layout_marginHorizontal="10dp"
+        android:transitionName="inputFieldTransition"
+        android:layout_marginHorizontal="15dp"
+        android:background="@color/white"
         android:layout_marginTop="10dp"
-        android:paddingHorizontal="10dp"
+        android:padding="10dp"
+        android:paddingHorizontal="20dp"
+        android:focusable="false"
         />
     <ImageView
-        android:id="@+id/button_X"
+        android:id="@+id/search_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:transitionName="inputFieldTransition"
+        app:layout_constraintTop_toTopOf="@id/input_search_field"
         app:layout_constraintBottom_toBottomOf="@+id/input_search_field"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="20dp"
-        android:src="@android:drawable/ic_menu_close_clear_cancel"/>
+        app:layout_constraintEnd_toEndOf="@id/input_search_field"
+        android:layout_marginEnd="10dp"
+        android:src="@android:drawable/ic_search_category_default"/>
 
     <com.kakao.vectormap.MapView
         android:id="@+id/map_view"
