--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,62 +5,45 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/searchWindow"
+    <com.kakao.vectormap.MapView
+        android:id="@+id/map_view"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="@string/searchWindowHint"
-        app:layout_constraintBottom_toTopOf="@id/savedSearchKeywordsList"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/delSearchKeyword"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:text="X"
-        app:layout_constraintBottom_toTopOf="@id/savedSearchKeywordsList"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/savedSearchKeywordsList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:scrollbarFadeDuration="0"
-        android:scrollbars="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/searchResults"
-        app:layout_constraintTop_toBottomOf="@id/searchWindow" />
+        android:layout_height="match_parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/searchResults"
+        android:id="@+id/goto_search_window"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/savedSearchKeywordsList"
-        app:layout_constraintHeight_default="spread"
-        >
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        android:background="@color/white"
+        android:elevation="10dp"
+        android:padding="15dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/emptySearchResults"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/searchResultEmpty"
-            android:gravity="center"
-            />
+            android:id="@+id/goto_search_window_text"
+            android:layout_width="0dp"
+            android:layout_height="35dp"
+            android:gravity="center|left"
+            android:text="@string/searchWindowHint"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/goto_search_window_img"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_default="spread" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/searchResultsList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbarFadeDuration="0"
-            android:scrollbars="vertical"
-            android:visibility="gone" />
+        <ImageView
+            android:id="@+id/goto_search_window_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/magnifying_glass"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/goto_search_window_text"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
