--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white"
         tools:context=".MainActivity">
 
         <LinearLayout
@@ -30,6 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/search_hint"
+                android:textColorHint="@color/gray"
+                android:textColor="@color/black"
                 android:padding="8dp"
                 android:background="@null"
                 android:imeOptions="actionDone"
