--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:background="@color/white">
 
     <EditText
-        android:id="@+id/searchEditText"
+        android:id="@+id/SearchEditTextInMain"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:hint="검색어를 입력해주세요."
@@ -25,7 +25,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/x_mark"
-        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
+        app:layout_constraintBottom_toBottomOf="@+id/SearchEditTextInMain"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="10dp"/>
@@ -37,7 +37,7 @@
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchEditText"
+        app:layout_constraintTop_toBottomOf="@id/SearchEditTextInMain"
         android:visibility="visible"
         android:orientation="horizontal"/>
 
@@ -59,7 +59,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchEditText"
+        app:layout_constraintTop_toBottomOf="@id/SearchEditTextInMain"
         android:textColor="@color/black"/>
 
 
