--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -13,18 +13,21 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:hint="검색어를 입력해주세요."
-        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:focusable="false" />
+        android:focusable="false"
+        android:layout_margin="10dp"
+        android:paddingLeft="15dp"
+        android:background="@drawable/edittext_shadow"/>
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/search_icon"
         app:layout_constraintBottom_toBottomOf="@+id/SearchEditTextInMap"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/SearchEditTextInMap"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="10dp"/>
 
