--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -5,12 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".presentation.PlaceActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:padding="16dp">
 
@@ -34,6 +36,10 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:paddingVertical="8dp"
+        android:scrollbars="horizontal">
         android:scrollbars="horizontal"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -43,6 +49,7 @@
             android:id="@+id/historyRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" />
             android:orientation="horizontal"
             />
     </HorizontalScrollView>
@@ -50,6 +57,9 @@
     <TextView
         android:id="@+id/emptyMessage"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -64,6 +74,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
+        android:visibility="gone" />
         android:visibility="gone"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
