--- a/app/src/main/res/layout/saveplace_item.xml
+++ b/app/src/main/res/layout/saveplace_item.xml
@@ -8,8 +8,8 @@
         android:id="@+id/saveCancelBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/deleteSavePlace"
-        android:src="@drawable/cancel_btn" />
+        android:src="@drawable/cancel_btn"
+        android:contentDescription="@string/deleteSavePlace" />
 
     <TextView
         android:id="@+id/savePlace"
