부산대 Android_김정희_3주차 과제_0단계 (#23)
* Initial commit

* Docs: README 작성

* Add: 검색어 삭제 버튼 사진 추가

* Design: 검색어 입력 및 검색 결과 표시 기본 레이아웃 구현

* Add: strings.xml 추가

* Feat: 데이터베이스 스키마 정의

* Feat: SQliteOpenHelper 상속

* Feat: ViewModel 생성

* Feat: 데이터 삽입 기능 구현

* Add: strings.xml 한글 리소스 추가

* Docs: step2 README 작성

* Comment: SearchView 주석 삭제

* Design: 검색어 저장 목록 아이템 디자인

* Design: 검색 결과 목록 아이템 디자인

* Add: 마커 아이콘 추가

* Feat: 데이터 존재 체킹 및 데이터 검색, 반환 기능 추가

* Feat: 검색어 저장 목록 관리 및 표시

* Feat: 검색 결과 목록 관리 및 표시

* Feat: DB에서 검색어와 일치하는 장소 검색 기능

* Feat: 검색 및 검색 결과-검색어 저장 목록 관리, 표시

---------

Co-authored-by: MyStoryG <bookwriterseo@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,66 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:padding="16dp">
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/etKeywords"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enterKeywords"
+            android:paddingStart="0dp"
+            android:paddingEnd="50dp" />
+
+        <ImageView
+            android:id="@+id/ivClear"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end|center_vertical"
+            android:contentDescription="@string/keywordsClear"
+            android:src="@drawable/close_24px" />
+
+    </FrameLayout>
 
     <TextView
+        android:id="@+id/tvNoResults"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/noKeywords"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvKeywords"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        android:visibility="visible"
+        android:orientation="horizontal"
+        android:scrollbars="horizontal"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSearchResult"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvKeywords"
+        android:scrollbars="vertical"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
