--- a/app/src/main/res/layout/log_item.xml
+++ b/app/src/main/res/layout/log_item.xml
@@ -27,7 +27,7 @@
             android:id="@+id/tvLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{place.place_name}"
+            android:text="@{place.place}"
             android:textStyle="bold"
             android:layout_marginLeft="12dp"
             app:layout_constraintTop_toTopOf="parent"
